--- a/.github/workflows/build-iso.yml
+++ b/.github/workflows/build-iso.yml
@@ -39,7 +39,7 @@ jobs:
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.myToken }}
-        file: vyos-build/build/vyos-1.3.1-${{ steps.date.outputs.time  }}-amd64.iso
+        file: vyos-build/build/vyos-${{ steps.date.outputs.time  }}-amd64.iso
         tag: equuleus-${{ steps.date.outputs.time  }}
         overwrite: true
         file_glob: true
