--- a/.github/workflows/build-iso.yml
+++ b/.github/workflows/build-iso.yml
@@ -31,7 +31,7 @@ jobs:
         
     - name: Build iso
       run: |
-        git clone -b 1.3.1 --single-branch https://github.com/vyos/vyos-build.git
+        git clone -b 1.3.2 --single-branch https://github.com/vyos/vyos-build.git
         cd vyos-build
         docker run --rm --privileged -v $(pwd):/vyos -w /vyos vyos/vyos-build:equuleus bash -c './configure --architecture amd64 --build-type release --version "${{ steps.date.outputs.time  }}" && sudo make iso'
 
@@ -39,7 +39,7 @@ jobs:
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.myToken }}
-        file: vyos-build/build/vyos-${{ steps.date.outputs.time  }}-amd64.iso
+        file: vyos-build/build/vyos-1.3.2-${{ steps.date.outputs.time  }}-amd64.iso
         tag: equuleus-${{ steps.date.outputs.time  }}
         overwrite: true
         file_glob: true
