--- a/.github/workflows/build-iso.yml
+++ b/.github/workflows/build-iso.yml
@@ -25,13 +25,13 @@ jobs:
       with:
        format: "YYYYMMDDHHmmss"
 
-    - name: Pull vyos-build docker image
+      - name: Pull vyos-build docker image
       run: |
         docker pull vyos/vyos-build:equuleus
         
     - name: Build iso
       run: |
-        git clone -b 1.3.3 --single-branch https://github.com/vyos/vyos-build.git
+        git clone -b equuleus --single-branch https://github.com/vyos/vyos-build.git
         cd vyos-build
         docker run --rm --privileged -v $(pwd):/vyos -w /vyos vyos/vyos-build:equuleus bash -c './configure --architecture amd64 --build-type release --version "${{ steps.date.outputs.time  }}" && sudo make iso'
 
